Spacing and styling fix

--- a/src/presentational-components/shared/top-toolbar.scss
+++ b/src/presentational-components/shared/top-toolbar.scss
@@ -14,6 +14,7 @@
     min-width: 200px;
   }
 }
-.top-toolbar-description {
+.ins-c-rbac__users-toolbar-description {
   padding: var(--pf-global--spacer--sm);
+  padding-left: 0px;
 }
